--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "description": "",
+  "main": "app.js",
+  "author": "",
+  "license": "ISC"
 }
